// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.failsafe.acceptance given: [case1] reviewer exits with code 0 (passed) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.review-pass
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.review-pass*.md
   │  ├─ reviews
   │  │   └─ r1: bash $route/.test/mock-exit-0.sh
   │  │       ├─ finished [TIME] ✓
   │  │       └─ review: .route/1.review-pass.guard.review.i1.613add76074d51bb1332d56c64b0c45a94da112c85ba83422faee5eae7fe4c86.r1.md
   │  └─ judges
   │      └─ j1: bash $route/.test/mock-judge-exit-0.sh
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.failsafe.acceptance given: [case2] reviewer exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  passed: false
   │  │  reason: threshold exceeded (1 > 0)
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by constraints
      └─ exit code: 2 ✋
"
`;

exports[`driver.route.failsafe.acceptance given: [case2] reviewer exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed [TIME]
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 2.review-constraint
   ├─ passage = blocked
   ├─ reason = threshold exceeded (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ $route/2.review-constraint*.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-exit-2.sh
      │       ├─ finished [TIME] ✓
      │       ├─ review: .route/2.review-constraint.guard.review.i1.7dfff6c4342f88fd78bd95ce11cfcb64115248ebd29ccf8d471c3af3dd324524.r1.md
      │       └─ 1 blocker 🔴
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-2.sh
              ├─ finished [TIME] ✗
              └─ reason: threshold exceeded (1 > 0)
"
`;

exports[`driver.route.failsafe.acceptance given: [case3] reviewer exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🔎 review 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: reviewer crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: ERROR: fatal crash
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥
"
`;

exports[`driver.route.failsafe.acceptance given: [case3] reviewer exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - malfunctioned [TIME]
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 3.review-malfunction
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   └─ guard
      ├─ artifacts
      │   └─ $route/3.review-malfunction*.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-exit-1.sh
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/3.review-malfunction.guard.review.i1.e6899cb4b34e29da3e2511dce8b873fd8200e69c57349ae281c9b7a2de77c767.r1.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-0.sh
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.failsafe.acceptance given: [case3] reviewer exits with code 1 (malfunction) when: [t2] route.drive is invoked after malfunction then: stdout matches snapshot 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 3.review-malfunction
   │
   └─ 💥 halted, guard malfunction
      └─ please tell a human this needs to be fixed before you can continue
"
`;

exports[`driver.route.failsafe.acceptance given: [case4] judge exits with code 0 (passed) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 4.judge-pass
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/4.judge-pass*.md
   │  └─ judges
   │      └─ j1: bash $route/.test/mock-judge-exit-0.sh
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.failsafe.acceptance given: [case5] judge exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  passed: false
   │  │  reason: threshold exceeded (1 > 0)
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by constraints
      └─ exit code: 2 ✋
"
`;

exports[`driver.route.failsafe.acceptance given: [case5] judge exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 5.judge-constraint
   ├─ passage = blocked
   ├─ reason = threshold exceeded (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ $route/5.judge-constraint*.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-2.sh
              ├─ finished [TIME] ✗
              └─ reason: threshold exceeded (1 > 0)
"
`;

exports[`driver.route.failsafe.acceptance given: [case6] judge exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: judge crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: FATAL: judge process failed
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥
"
`;

exports[`driver.route.failsafe.acceptance given: [case6] judge exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 6.judge-malfunction
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   └─ guard
      ├─ artifacts
      │   └─ $route/6.judge-malfunction*.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-1.sh
              ├─ finished [TIME] ✗
              └─ reason: command exited 1; see judge artifact for details
"
`;

exports[`driver.route.failsafe.acceptance given: [case6] judge exits with code 1 (malfunction) when: [t2] route.drive is invoked after malfunction then: stdout matches snapshot 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 6.judge-malfunction
   │
   └─ 💥 halted, guard malfunction
      └─ please tell a human this needs to be fixed before you can continue
"
`;

exports[`driver.route.failsafe.acceptance given: [case7] both reviewer and judge malfunction when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🔎 review 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: reviewer crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: ERROR: fatal crash
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥

🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: judge crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: FATAL: judge process failed
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥
"
`;

exports[`driver.route.failsafe.acceptance given: [case7] both reviewer and judge malfunction when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - malfunctioned [TIME]
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 7.both-malfunction
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   └─ guard
      ├─ artifacts
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-exit-1.sh
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/7.both-malfunction.guard.review.i1.34b72e4e57a437f43fc6f51afed9bd3c19a078bd10bfa8ff437f4f1956821e9a.r1.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-1.sh
              ├─ finished [TIME] ✗
              └─ reason: command exited 1; see judge artifact for details
"
`;
